# dotfiles

./: .gitattributes  .gitignore  .gitmodules  Brewfile  LICENSE  README.md  apply.sh  flake.nix  install.sh  package-lock.json  package.json
.config/: starship.toml
.config/fish/: abbr.fish  config.fish  fish_plugins  fish_variables
.config/mise/: config.toml
.config/nvim/: lazy-lock.json  lazyvim.json
.config/wezterm/: format.lua  keybinds.lua  status.lua  wezterm.lua
config/: starship.toml
config/bat/: config
config/fish/: abbr.fish  config.fish  fish_plugins
config/gh/: hosts.yml
config/hatch/: config.toml
config/mise/: config.toml
config/nvim/: lazy-lock.json  lazyvim.json
config/python/: .gitignore  example.ipynb  example.py  pyproject.toml  python-dev-1.rockspec
config/starship/: starship.toml
config/superfile/: config.toml
config/vale/: .vale.ini
config/vimium/: vimium-options.json
config/wezterm/: format.lua  keybinds.lua  wezterm.lua
machines/shared/: darwin.nix
modules/: bat.nix  home.nix  mise.nix  pkgs.nix  shell.nix  starship.nix
modules/darwin/: default.nix
modules/fish/: default.nix
modules/gh/: default.nix
modules/ghostty/: config
modules/git/: default.nix
modules/lazygit/: default.nix
modules/wezterm/: default.nix
private_dot_config/bat/: config
private_dot_config/btop/: btop.conf
private_dot_config/gh/: config.yml
private_dot_config/ghostty/: config
scripts/: .setup.template.sh  bat.sh  colima.sh  fzf.sh  gh-cli.sh  git-delta.sh  github.sh  hatch.sh  lazygit.sh  mise.sh  nvim.sh  pipx.sh  poetry.sh  setup.fish  starship.sh  superfile.sh  tre.sh  vale.sh  wezterm.sh
snippets/: python.lua
(+82 files in other folders)
