[tool.poetry]
name = "my python"
version = "0.1.0"
description = ""
authors = ["mRshly <mshrm808@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pandera = "^0.18.3"
jupyter = "^1.0.0"
pynvim = "^0.5.0"
jupyter-client = "^8.6.1"
plotly = "^5.20.0"
pillow = "^10.3.0"
pnglatex = "^1.1"
cairosvg = "^2.7.1"
ipykernel = "^6.29.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
