[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "neovim>=0.3.1",
    "pandas>=2.2.2",
    "pandera>=0.20.4",
    "pytest>=8.3.2",
    "rich>=13.8.0",
    "ruff>=0.6.4",
]
